--- a/wiki/config.wiki
+++ b/wiki/config.wiki
@@ -48,6 +48,6 @@ copyright="<!--Website Virutalization-->"
 
 ngcore 为你管系统地址，你管系统可以到[http://code.google.com/p/youtubeindex/]下载
 
-*严禁用户用原来的youtaba.tk地址，因为盗用流量是严重侵害youtaba.tk网站利益的行为*
+*请不要使用默认的youtaba.tk地址，请及时更换以免发生灾难性后果*
 
 copyright 为附加信息，可以加入版权信息。
