--- a/wiki/install.wiki
+++ b/wiki/install.wiki
@@ -12,7 +12,7 @@
 ||公用页面||conn.asp||
 ||播放器||player.swf||
 
-下载源代码：downloads/list（一般选带有featured的）
+下载源代码：[downloads/list]（一般选带有featured的）
 
 2、向NS添加一条A记录（或Cname），可以为二级域名，指向存放该代码的服务器。
 
