--- a/wiki/install.wiki
+++ b/wiki/install.wiki
@@ -17,9 +17,8 @@
 
 2、向NS添加一条A记录（或Cname），可以为二级域名，指向存放该代码的服务器。
 
-3、根据下方地址的说明，修改配置文件。*重要
-
-[http://code.google.com/p/websitevirtualization/wiki/config wiki/config]
+3、根据[http://code.google.com/p/websitevirtualization/wiki/config wiki/config]
+的说明，修改配置文件。
 
 4、配置服务器的404页面为404.asp *重要
 
