--- a/wiki/install.wiki
+++ b/wiki/install.wiki
@@ -1,5 +1,5 @@
 #labels Featured
-=安装指南=
+=安装与配置指南=
 
 搭建环境：非天朝服务器+ASP+自定义404页面
 
@@ -17,8 +17,8 @@
 
 2、向NS添加一条A记录（或Cname），可以为二级域名，指向存放该代码的服务器。
 
-3、根据说明，修改配置文件conn.asp。[http://code.google.com/p/websitevirtualization/wiki/config 详见这里]
-
+3、根据说明，修改配置文件conn.asp。
+<blockquote>
 conn.asp中可以自定义的区域为
 {{{
 <%
@@ -31,8 +31,10 @@ copyright="<!--Website Virutalization-->"
 ||domain|| 站点域名。可以为2级或1级域名，尽量不要带“/”||
 ||ngcore|| 你管系统地址，你管系统可以到[http://code.google.com/p/youtubeindex/]下载||
 ||copyright|| 附加信息，可以加入版权信息。||
+
 *请不要使用默认的youtaba.tk地址，请及时更换以免发生灾难性后果*
 
+</blockquote>
 4、配置服务器的404页面为404.asp *重要
 
 完成后，虚拟化将开始工作。
