Edited wiki page security through web user interface.

--- a/wiki/security.wiki
+++ b/wiki/security.wiki
@@ -6,7 +6,7 @@
 您正在使用的 网站虚拟化工具包 或 你管索引,我管显示（Youtube Website Virtualization）系一家独立的非营利性组织开发的用以实现无障碍的互联网访问的WEB应用程序。
 
 ===对被虚拟站点上的文件的处理===
-该程序采用了如下技术处理被虚拟站点的文件以防止来自第三方的非法屏蔽（如G.）：
+该程序采用了如下技术处理被虚拟站点的文件以防止来自第三方的*非法*屏蔽（如G.）：
 
 ||域名替换||
 ||请求敏感词自动替换||
