Edited wiki page security through web user interface.

--- a/wiki/security.wiki
+++ b/wiki/security.wiki
@@ -9,7 +9,7 @@
 该程序采用了如下技术处理被虚拟站点的文件以防止来自第三方的*非法*屏蔽（如G.）：
 
 ||域名替换||
-||Request敏感词自动替换||
+||URL敏感词自动替换||
 
 该程序支持对下列格式的处理：
 
@@ -31,4 +31,7 @@
 这些文件内容将不经过上述处理而直接返回给用户。
 
 ===识别文件类别的方式===
-该程序是通过MIME信息识别文件的，而非通过扩展名。该程序可以很好的支持无扩展名或扩展名已经混乱的页面。
+该程序是通过MIME信息识别文件的，而非通过扩展名。该程序可以很好的支持无扩展名或扩展名已经混乱的页面。（如验证码）
+
+===被第三方非法屏蔽的可能性===
+该系统已经尽量使页面返回信息与普通网站页面的相同。从该信息中，几乎难以检测该系统的存在。
