--- a/wiki/security.wiki
+++ b/wiki/security.wiki
@@ -34,4 +34,6 @@
 该程序是通过MIME信息识别文件的，而非通过扩展名。该程序可以很好的支持无扩展名或扩展名已经混乱的页面。（如验证码）
 
 ===被第三方非法屏蔽的可能性===
-该系统已经尽量使页面返回信息与普通网站页面的相同。从该信息中，几乎难以检测该系统的存在。
+该系统已经尽量使页面返回信息与普通网站页面的相同。依照G.使用的监测方式，从这些信息中，几乎难以检测该系统的存在。我们尽力保护您的网站的IP与域名在天朝的安全。
+
+_本文中的G.指天朝地区的一个非法组织_
