Edited wiki page security through web user interface.

--- a/wiki/security.wiki
+++ b/wiki/security.wiki
@@ -36,4 +36,4 @@
 ===被第三方非法屏蔽的可能性===
 该系统已经尽量使页面返回信息与普通网站页面的相同。依照G.使用的监测方式，从这些信息中，几乎难以检测该系统的存在。我们尽力保护您的网站的IP与域名在天朝的安全。
 
-_本文中的G.指天朝地区的一个非法组织_
+_本文中的G.指天朝地区的一个非法组织，该组织长期从事互联网干扰_
