Edited wiki page install through web user interface.

--- a/wiki/install.wiki
+++ b/wiki/install.wiki
@@ -34,11 +34,12 @@ copyright="<!--Website Virutalization-->"
 %>
 }}}
 其中各变量用途如下：
-||domain|| 站点域名。可以为2级或1级域名，尽量不要带“/”||*在3.1版中该项可不需自定义*||
+||domain|| ~~站点域名。可以为2级或1级域名，尽量不要带“/”~~||在3.1版中该项可不需自定义||
 ||ngcore|| 你管系统地址，你管系统可以到[http://code.google.com/p/youtubeindex/]下载||
 ||copyright|| 附加信息，可以加入版权信息。||
 
 *请不要使用默认的youtaba.tk地址，请及时更换以免发生灾难性后果*
+
 *你管系统需要您的服务器支持PHP*
 </blockquote>
 4、配置服务器的404页面为404.asp *重要*
