Edited wiki page security through web user interface.

--- a/wiki/security.wiki
+++ b/wiki/security.wiki
@@ -5,7 +5,7 @@
 
 您正在使用的 网站虚拟化工具包 或 你管索引,我管显示（Youtube Website Virtualization）系一家独立的非营利性组织开发的用以实现无障碍的互联网访问的WEB应用程序。
 
-===对被虚拟站点上的文件的处理===
+===被虚拟站点上的文件===
 该程序采用了如下技术处理被虚拟站点的文件以防止来自第三方的*非法*屏蔽（如G.）：
 
 ||域名替换||
@@ -17,6 +17,7 @@
 ||text/html||
 ||text/css||
 ||application/x-javascript||
+||text/xml||3.1版本新加入||
 
 这些文件内容将被自动进行上述处理
 
@@ -32,7 +33,14 @@
 
 *注：该程序是通过MIME信息识别文件的，而非通过扩展名。该程序可以很好的支持无扩展名或扩展名已经混乱的页面。（如验证码）*
 
+===Get与Post===
+该系统已经可以转交来自客户端的以Get方式提交的表单数据，然而对于采用Post方式提交的数据（通常如登陆页面），该系统暂时不给予支持。
+
+===Cookie / session===
+我们正在努力解决Cookie模拟问题。在现今发布的所有版本中，该问题还未得到解决。
+
 ===被G.非法屏蔽的可能性===
 该系统已经尽量使页面返回信息与普通网站页面的相同。依照G.使用的监测方式，从这些信息中，几乎难以检测该系统的存在。我们尽力保护您的网站的IP与域名在天朝的安全。
+
 
 _本文中的G.指天朝地区的一个非法组织，该组织长期从事互联网干扰_
