--- a/wiki/install.wiki
+++ b/wiki/install.wiki
@@ -19,7 +19,7 @@
 
 2、向NS添加一条A记录（或Cname），可以为二级域名，指向存放该代码的服务器。
 <blockquote>
-_该操作可能需要48小时生效_
+_该操作可能需要48小时生效。_
 </blockquote>
 
 3、根据说明，修改配置文件conn.asp。
@@ -34,13 +34,17 @@ copyright="<!--Website Virutalization-->"
 %>
 }}}
 其中各变量用途如下：
-||domain|| ~~站点域名。可以为2级或1级域名，尽量不要带“/”~~||在3.1版中该项可不需自定义||
-||ngcore|| 你管系统地址，你管系统可以到[http://code.google.com/p/youtubeindex/]下载||
+||domain|| ~~站点域名。可以为2级或1级域名。~~||在3.1版中该项可不需自定义||
+||ngcore|| 你管系统地址||请不要使用默认的youtaba.tk地址，请及时更换以免发生灾难性后果||
 ||copyright|| 附加信息，可以加入版权信息。||
 
-*请不要使用默认的youtaba.tk地址，请及时更换以免发生灾难性后果*
+ * 3.1版本中，站点域名改用自动获取。
+   # 如果您必须将该系统部署于站点根目录，通过类似{{{http://yourname.yourdomain.com/}}}的地址可以访问到该系统，则您不需要作任何修改。
+   # 如果您将该系统其部署于类似于{{{http://yourname.yourdomain.com/test/}}}的地址，则您需要将{{{domain=Request.ServerVariables("SERVER_NAME")}}}修改为{{{domain="yourname.yourdomain.com/test"}}}（结尾不需要“/”）
 
-*你管系统需要您的服务器支持PHP*
+ * 你管系统可以到[http://code.google.com/p/youtubeindex/]下载
+
+_你管系统需要您的服务器支持PHP_
 </blockquote>
 4、配置服务器的404页面为404.asp *重要*
 <blockquote>
@@ -50,5 +54,15 @@ copyright="<!--Website Virutalization-->"
 
 _我们不推荐您使用虚拟主机或网页空间，如有可能，请更换为其他服务方式。_
 </blockquote>
+
+5、配置服务器的默认页面 *可选*
+<blockquote>
+已知支持404页面自定义的虚拟主机控制面板：Starout（星外）、华众、cPanel、VistaPanel、DirectAdmin
+
+如果你使用的是其他虚拟主机控制面板，请联系其提供商查询关于如何自定义404页面的信息。
+
+_我们不推荐您使用虚拟主机或网页空间，如有可能，请更换为其他服务方式。_
+</blockquote>
+
 
 完成以上所有步骤，虚拟化将开始工作。
