Edited wiki page install through web user interface.

--- a/wiki/install.wiki
+++ b/wiki/install.wiki
@@ -32,7 +32,7 @@ copyright="<!--Website Virutalization-->"
 }}}
 其中各变量用途如下：
 ||domain||~~站点域名。可以为2级或1级域名。~~||在3.1版中该项可不需自定义||
-||ngcore||~~你管系统地址~~||请不要使用默认的youtaba.tk地址，请及时更换以免发生灾难性后果||在3.2版中该项已经删除||
+||ngcore||~~你管系统地址~~||在3.2版中该项已经删除||
 ||copyright|| 附加信息，可以加入版权信息。||
 
  * 3.1版本中，站点域名改用自动获取。
