Edited wiki page security through web user interface.

--- a/wiki/security.wiki
+++ b/wiki/security.wiki
@@ -3,7 +3,7 @@
 
 ===概述===
 
-您正在使用的 网站虚拟化工具包 或 你管索引,我管显示（Youtube Website Virtualization）系一家独立的非营利性组织开发的用以实现无障碍的互联网访问的WEB应用程序。
+您正在使用的 网站虚拟化工具包 或 Youtube Website Virtualization系一家独立的非营利性组织开发的用以实现无障碍的互联网访问的WEB应用程序。
 
 ===被虚拟站点上的文件===
 该程序采用了如下技术处理被虚拟站点的文件以防止来自第三方的*非法*屏蔽（如G.）：
@@ -32,6 +32,9 @@
 这些文件内容将不经过上述处理而直接返回给用户。
 
 *注：该程序是通过MIME信息识别文件的，而非通过扩展名。该程序可以很好的支持无扩展名或扩展名已经混乱的页面。（如验证码）*
+
+===流媒体提供===
+在3.2版本之前，该系统使用你管索引提供流媒体数据，在3.2版本之后，该系统使用streamer.file2hd.com提供流媒体数据。
 
 ===Get与Post===
 该系统已经可以转交来自客户端的以Get方式提交的表单数据，然而对于采用Post方式提交的数据（通常如登陆页面），该系统暂时不给予支持。
