Edited wiki page security through web user interface.

--- a/wiki/security.wiki
+++ b/wiki/security.wiki
@@ -34,12 +34,12 @@
 *注：该程序是通过MIME信息识别文件的，而非通过扩展名。该程序可以很好的支持无扩展名或扩展名已经混乱的页面。（如验证码）*
 
 ===流媒体提供===
-在3.2版本之前，该系统使用你管索引提供流媒体数据，在3.2版本之后，该系统使用streamer.file2hd.com提供流媒体数据。
+不同于其他类似程序，该程序传送流媒体视频不需消耗服务器流量。在3.2版本之前，该系统使用你管索引提供流媒体数据，在3.2版本之后，该系统使用streamer.file2hd.com提供流媒体数据。
 
 ===Get与Post===
 该系统已经可以转交来自客户端的以Get方式提交的表单数据，然而对于采用Post方式提交的数据（通常如登陆页面），该系统暂时不给予支持。
 
-===Cookie / session===
+===Cookie与session===
 我们正在努力解决Cookie模拟问题。在现今发布的所有版本中，该问题还未得到解决。
 
 ===被G.非法屏蔽的可能性===
